Fix practice header on mobile

--- a/anatomy/static/sass/_responsive.sass
+++ b/anatomy/static/sass/_responsive.sass
@@ -48,6 +48,10 @@
       line-height: 20px
     .label
       margin-left: -15px
+  .header-practice
+    h1
+      font-size: 1em
+      margin: 2px
 
 @media (max-width: 520px)
   .hidden-xxs
